# eda-agentbench

./: .gitignore  CLAUDE.md  README.md  README.zh.md  pyproject.toml
datagen/: .gitignore  CLAUDE.md  README.md  README.zh.md  pyproject.toml
datagen/docs/: commercial_tool_adapters.md  commercial_tool_adapters.zh.md  datacard_draft.md  datacard_draft.zh.md  evaluator_bundle.md  evaluator_bundle.zh.md  public_release_policy.md  public_release_policy.zh.md  release_checklist.md  release_checklist.zh.md  task_schema.md  task_schema.zh.md  taxonomy.md  taxonomy.zh.md  validation_policy.md  validation_policy.zh.md
datagen/generators/spice_deck_debug/: generate.py
datagen/schemas/: grader_contract_schema.json  task_schema.json  validation_record_schema.json
datagen/scripts/: check_release_safety.sh  export_spice_eval_bundle.sh  generate_prototypes.sh  package_public_task.sh  package_spice_public_batch.sh  smoke_static.sh  validate_commercial_example.sh  validate_one_candidate.sh  validate_spice_batch.sh
datagen/tasks_candidates/spice_deck_debug_0001/: metadata.json
datagen/tasks_candidates/spice_deck_debug_0002/: metadata.json
datagen/tasks_candidates/spice_deck_debug_0003/: metadata.json
datagen/tasks_candidates/spice_deck_debug_0004/: metadata.json
datagen/tasks_candidates/spice_deck_debug_0005/: metadata.json
datagen/tasks_candidates/spice_deck_debug_0006/: metadata.json
datagen/tasks_candidates/spice_deck_debug_0007/: metadata.json
datagen/tasks_candidates/spice_deck_debug_0008/: metadata.json
datagen/tasks_candidates/spice_deck_debug_0009/: metadata.json
datagen/tasks_candidates/spice_deck_debug_0010/: metadata.json
datagen/tasks_candidates/spice_deck_debug_0011/: metadata.json
datagen/tasks_candidates/spice_deck_debug_0012/: metadata.json
datagen/tasks_public/: README.md  manifest.jsonl
datagen/tests/: test_generators.py  test_schemas.py  test_validators.py
(+2788 files in other folders)
