[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eda-agentbench"
version = "0.1.0"
description = "Benchmark for evaluating LLM/Agent on commercial EDA workflows"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
eda-bench = "eda_agentbench.cli:main"

[tool.setuptools.packages.find]
include = ["eda_agentbench*"]

# Only collect the harness's own tests at the repo root. The data-generation
# module under datagen/ has its own tests + deps and is run from that directory
# (cd datagen && pytest); keep it out of the root test run.
[tool.pytest.ini_options]
testpaths = ["tests"]
